--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,29 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+body {
+  min-height: 100svh;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  display: grid;
+  grid-template-columns: minmax(1rem, 1fr) minmax(0, 1200px) minmax(1rem, 1fr);
+  grid-template-rows: auto 1fr auto;
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+  > header,
+  > main,
+  > footer {
+    grid-column: 1 / 4;
+    display: grid;
+    grid-template-columns: subgrid;
+
+    > * {
+      grid-column: 2;
+    }
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+.flow-space {
+  > * + * {
+    margin-block-start: var(--flow-space, 0.5em);
+  }
 }
