--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,3 +28,16 @@ body {
     margin-block-start: var(--flow-space, 0.5em);
   }
 }
+
+.loaderIcon {
+  animation: spin 1.5s infinite linear;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
